# stock-ml-lab

./: .$Basic Design.drawio.bkp  Basic Design.drawio  README.md  RELIANCE_NS.csv  pyproject.toml
data/processed/: RELIANCE.NS.csv  RELIANCE.NS.featured.csv  RELIANCE.NS.labeled.csv  RELIANCE.NS.parquet
data/raw/: RELIANCE.NS.csv
src/: binary_labels.py  data_collector.py  feature_data.py  training_data.py
